@@ -22,72 +22,12 @@ along with obdgpslogger.  If not, see <http://www.gnu.org/licenses/>.
 
 #include "sqlite3.h"
 
-/// Print help
-void printhelp(const char *argv0);
-
-/// Check indices on tables
-/** \return 0 if we changed nothing. -1 for error. >0 if we changed stuff. */
-int checkindices(sqlite3 *db);
+#include "obdrepair.h"
 
 /// Internal function for checkindices
 /** \return 0 if we changed nothing. -1 for error. >0 if we changed stuff. */
-int checkindex(sqlite3 *db, const char *indexname, const char *tablename, const char *indexcolumn);
+int checkindex(sqlite3 *db, const char *indexname, const char *tablename, const char *indexcolumn, int unique);
 
-/// Fix ends of trips
-/** \return 0 if we changed nothing. -1 for error. >0 if we changed stuff. */
-int checktripends(sqlite3 *db);
-
-/// Fix trip ids
-/** \return 0 if we changed nothing. -1 for error. >0 if we changed stuff. */
-int checktripids(sqlite3 *db, const char *table_name);
-
-/// Run ANALYZE against the db
-int analyze(sqlite3 *db);
-
-int main(int argc, const char **argv) {
-	if(argc < 2 || 0 == strcmp("--help", argv[1]) ||
-				0 == strcmp("-h", argv[1])) {
-		printhelp(argv[0]);
-		exit(0);
-	}
-
-	sqlite3 *db;
-	int rc;
-
-	if(SQLITE_OK != (rc = sqlite3_open_v2(argv[1], &db, SQLITE_OPEN_READWRITE, NULL))) {
-		fprintf(stderr, "Can't open database %s: %s\n", argv[1], sqlite3_errmsg(db));
-		sqlite3_close(db);
-		exit(1);
-	}
-
-	printf("About to check trip ends\n");
-	checktripends(db);
-	printf("Done checking trip ends\n");
-
-	printf("About to check trip ids on obd table\n");
-	checktripids(db, "obd");
-	printf("About to check trip ids on gps table\n");
-	checktripids(db, "gps");
-	printf("Done checking tripids\n");
-
-	printf("About to check indices\n");
-	checkindices(db);
-	printf("Done checking indices\n");
-
-	printf("About to run analyze\n");
-	analyze(db);
-	printf("Done running analyze\n");
-
-	sqlite3_close(db);
-
-	printf("Done\n");
-	return 0;
-}
-
-void printhelp(const char *argv0) {
-	printf("Usage: %s <database>\n"
-			"Take a few best guesses at repairing an obdgpslogger log\n", argv0);
-}
 
 int analyze(sqlite3 *db) {
 	
@@ -103,30 +43,75 @@ int analyze(sqlite3 *db) {
 	}
 }
 
+int checkobdecu(sqlite3 *db) {
+	int retvalue = 0;
+	int rc = 0;
+	char *errmsg = NULL;
+
+	sqlite3_stmt *stmt;
+
+	char pragma_sql[256];
+	snprintf(pragma_sql, sizeof(pragma_sql), "PRAGMA table_info(obd)");
+
+	if(SQLITE_OK != (rc = sqlite3_prepare_v2(db, pragma_sql, -1, &stmt, NULL))) {
+		fprintf(stderr,"Error preparing SQL: (%i) %s\nSQL: \"%s\"\n", rc, sqlite3_errmsg(db), pragma_sql);
+		return -1;
+	}
+
+	int found_ecu_col = 0;
+	while(SQLITE_ROW == sqlite3_step(stmt)) {
+		if(0 == strcmp("ecu",sqlite3_column_text(stmt, 1))) {
+			found_ecu_col = 1;
+		}
+	}
+
+	sqlite3_finalize(stmt);
+
+	if(0 == found_ecu_col) {
+		char addcol_sql[256];
+		snprintf(addcol_sql, sizeof(addcol_sql), "ALTER TABLE obd ADD ecu INTEGER DEFAULT 0");
+
+		if(SQLITE_OK != sqlite3_exec(db, addcol_sql, NULL, NULL, &errmsg)) {
+			fprintf(stderr, "ALTER db. SQL reported: %s\nSQL: \"%s\"\n", errmsg, addcol_sql);
+			sqlite3_free(errmsg);
+			return -1;
+		} else {
+			printf("Ran ALTER sql: \"%s\"\n", addcol_sql);
+			retvalue++;
+		}
+	}
+
+	return retvalue;
+}
+
 int checkindices(sqlite3 *db) {
 	int retvalue = 0;
 
 	int rc;
-	rc = checkindex(db, "IDX_GPSTIME", "gps", "time");
+	rc = checkindex(db, "IDX_GPSTIME", "gps", "time", 0);
 	if(-1 == rc) return -1;
 	if(rc > 0) retvalue++;
 
-	checkindex(db, "IDX_GPSTRIP", "gps", "trip");
+	checkindex(db, "IDX_GPSTRIP", "gps", "trip", 0);
 	if(-1 == rc) return -1;
 	if(rc > 0) retvalue++;
 
-	checkindex(db, "IDX_OBDTIME", "obd", "time");
+	checkindex(db, "IDX_OBDTIME", "obd", "time", 0);
 	if(-1 == rc) return -1;
 	if(rc > 0) retvalue++;
 
-	checkindex(db, "IDX_OBDTRIP", "obd", "trip");
+	checkindex(db, "IDX_OBDTRIP", "obd", "trip", 0);
+	if(-1 == rc) return -1;
+	if(rc > 0) retvalue++;
+
+	checkindex(db, "IDX_VINECU", "ecu", "vin,ecu", 1);
 	if(-1 == rc) return -1;
 	if(rc > 0) retvalue++;
 
 	return retvalue;
 }
 
-int checkindex(sqlite3 *db, const char *indexname, const char *tablename, const char *indexcolumn) {
+int checkindex(sqlite3 *db, const char *indexname, const char *tablename, const char *indexcolumn, int unique) {
 	int retvalue = 0;
 
 	int rc;
@@ -155,8 +140,8 @@ int checkindex(sqlite3 *db, const char *indexname, const char *tablename, const 
 
 	if(0 == idx_found) {
 		char create_idx_sql[128];
-		snprintf(create_idx_sql, sizeof(create_idx_sql), "CREATE INDEX %s ON %s (%s)",
-			indexname, tablename, indexcolumn);
+		snprintf(create_idx_sql, sizeof(create_idx_sql), "CREATE %s INDEX %s ON %s (%s)",
+			unique?"UNIQUE":"", indexname, tablename, indexcolumn);
 
 		char *errmsg;
 		if(SQLITE_OK != (rc = sqlite3_exec(db, create_idx_sql, NULL, NULL, &errmsg))) {
