@@ -1,5 +1,6 @@
 Version 0.15
  Sim: Always return errors in groups of three, padded if necessary
+ Logrepair: split repair functions into separate library
 
 Version 0.14 (released 2010-04-02)
  Sim: gui_fltk has dials instead of input boxes
